Crash trying to add an object to a linked collection that is linked to multiple scenes #98469

Closed
opened 2022-05-28 17:16:09 +02:00 by Georg K · 4 comments

System Information
Operating system: Linux-5.17.9-1-MANJARO-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD VERDE (LLVM 13.0.1, DRM 2.50, 5.17.9-1-MANJARO) AMD 4.5 (Core Profile) Mesa 22.0.4

Blender Version
Broken: 2.91.2, 2.93.0, 3.0.1, version: 3.3.0 Alpha, branch: master, commit date: 2022-05-28 08:23, hash: 314e5cb889
Worked: -

Short description of error
Blender crashes when accidentally trying to add an object to a linked collection that is linked to multiple scenes (this usually works: it just adds the new object to the parent collection).
The attached file is from a larger project that has been reduced to the bare minimum while keeping the crash. The crash also happened with the origin.blend file present.
The crash does not occur if

  • the current scene is renamed, saved and reloaded
  • the other scene "Scene" is deleted
  • the collection "0C SkinMan" is unlinked from "Scene"
  • you add the new object in scene "Scene" with the collection "0C SkinMan" selected there

Exact steps for others to reproduce the error

  • in the attached file, check the Outliner to make sure that the collection "0C SkinMan" is active
  • add an object e.g. a plane in the 3D viewport
  • crash (usually instantly, but sometimes it just hangs and Blender becomes unresponsive)

CRASH 10J.blend

backtrace
./blender(BLI_system_backtrace+0x33) [0xbfe40d3]
./blender() [0x11920dd]
/usr/lib/libc.so.6(+0x3e8e0) [0x7f3e437e28e0]
./blender(BKE_view_layer_base_select_and_set_active+0x4) [0x11f8ef4]
./blender(BKE_object_add+0x7c) [0x125159c]
./blender(ED_object_add_type_with_obdata+0x18a) [0x21dc48a]
./blender(ED_object_add_type+0x15) [0x21dc645]
./blender() [0x219e030]
./blender() [0x219e210]
./blender() [0x17280c6]
./blender() [0x172867b]
./blender(WM_operator_name_call_ptr+0x18) [0x1728ca8]
./blender() [0x234d18a]
./blender() [0x235f9b1]
./blender() [0x172c7ac]
./blender() [0x172d28d]
./blender(wm_event_do_handlers+0x439) [0x172de09]
./blender(WM_main+0x20) [0x1722190]
./blender(main+0x325) [0x10940f5]
/usr/lib/libc.so.6(+0x29290) [0x7f3e437cd290]
/usr/lib/libc.so.6(__libc_start_main+0x8a) [0x7f3e437cd34a]
./blender(_start+0x25) [0x118e785]

**System Information** Operating system: Linux-5.17.9-1-MANJARO-x86_64-with-glibc2.35 64 Bits Graphics card: AMD VERDE (LLVM 13.0.1, DRM 2.50, 5.17.9-1-MANJARO) AMD 4.5 (Core Profile) Mesa 22.0.4 **Blender Version** Broken: 2.91.2, 2.93.0, 3.0.1, version: 3.3.0 Alpha, branch: master, commit date: 2022-05-28 08:23, hash: `314e5cb889` Worked: - **Short description of error** Blender crashes when accidentally trying to add an object to a linked collection that is linked to multiple scenes (this usually works: it just adds the new object to the parent collection). The attached file is from a larger project that has been reduced to the bare minimum while keeping the crash. The crash also happened with the origin.blend file present. The crash does not occur if - the current scene is renamed, saved and reloaded - the other scene "Scene" is deleted - the collection "0C SkinMan" is unlinked from "Scene" - you add the new object in scene "Scene" with the collection "0C SkinMan" selected there **Exact steps for others to reproduce the error** - in the attached file, check the Outliner to make sure that the collection "0C SkinMan" is active - add an object e.g. a plane in the 3D viewport - crash (usually instantly, but sometimes it just hangs and Blender becomes unresponsive) [CRASH 10J.blend](https://archive.blender.org/developer/F13118380/CRASH_10J.blend) backtrace ./blender(BLI_system_backtrace+0x33) [0xbfe40d3] ./blender() [0x11920dd] /usr/lib/libc.so.6(+0x3e8e0) [0x7f3e437e28e0] ./blender(BKE_view_layer_base_select_and_set_active+0x4) [0x11f8ef4] ./blender(BKE_object_add+0x7c) [0x125159c] ./blender(ED_object_add_type_with_obdata+0x18a) [0x21dc48a] ./blender(ED_object_add_type+0x15) [0x21dc645] ./blender() [0x219e030] ./blender() [0x219e210] ./blender() [0x17280c6] ./blender() [0x172867b] ./blender(WM_operator_name_call_ptr+0x18) [0x1728ca8] ./blender() [0x234d18a] ./blender() [0x235f9b1] ./blender() [0x172c7ac] ./blender() [0x172d28d] ./blender(wm_event_do_handlers+0x439) [0x172de09] ./blender(WM_main+0x20) [0x1722190] ./blender(main+0x325) [0x10940f5] /usr/lib/libc.so.6(+0x29290) [0x7f3e437cd290] /usr/lib/libc.so.6(__libc_start_main+0x8a) [0x7f3e437cd34a] ./blender(_start+0x25) [0x118e785]
Author

Added subscriber: @georgK

Added subscriber: @georgK

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by e72b86d3cb

This issue was referenced by e72b86d3cba8c7366bee2e92162f3b07bf367f3d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-06-01 15:04:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98469
No description provided.